--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularProyecto</title>
+  <title>Vero Ramirez</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text" href="styles.css">
+  <script src="https://kit.fontawesome.com/9e9cb7ac82.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
